--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.10.0",
+    "react-native-video-player": "^0.16.0",
     "react-native-webview": "^13.12.5"
   },
   "devDependencies": {
